# KokkosVegas

./: CMakeLists.txt  KokkosCore_config.h  func.cuh  kokkosVegas.cpp  vegas_mcubes_kokkosV0.cpp  vegas_mcubes_kokkosV1.cpp  vegas_mcubes_noshuffle.cu
